version 0.7.3
Added a small docbook handbook and some icons. More bugfixes.

version 0.7.2
Snapshots now are nested in the tree like mirror legs. 
Compressed all the seperate vgchange dialogs into one. Changed 
the volume group tree widget to keep the same trees expanded
or collapsed when the widget gets updated. Added a column
to show the metadata areas on the physical volumes and their
size.

version 0.7.1
Replaced missing include in "lvrename.h" and fixed
the "remaining" column in the first tab. It was reporting
blocks and not bytes.

version 0.7.0
Many internal fixes. LVM now supports resizing mirrors
so that was added along with mirrored mirror logs and multi
segment mirrors. library lvm2app is now used and required.
Btrfs is supported along with volume group splitting and 
merging.

version 0.6.2
Shrinking and growing physical volumes is now supported.
Filesystems can be removed from partitions now. Removed the
menu item for rescanning only one volume group. It was causing
crashes but may be added back when I have time to do it 
right.

version 0.6.1
The filesystem grow and shrink parts of PartMoveResize
have been moved out of that object and put into their
own files. lv reduce now looks at the minimum shrink 
size for a filesystem. A simple setup function was added
to set the kvpm configuration to something sensible the 
first time kvpm is run. 

version 0.6.0
Partitions can now be moved and resized for ext2 and ext3
filesystems. The "fsck" program is now required too.

version 0.5.5
The kvpm "settings" dialog can set the column hidden/show for
both of the tree views and save it in the config file.

version 0.5.4
The volume group creation dialog can be called from
the "volume group" menu now and create new groups
from multiple physical volumes.

version 0.5.3
The settings menu is partly implemented. The search 
path for the needed programs such as "vgs" can be 
configured.

version 0.5.2
mount points are on the main tree view now.